operator/pkg/gateway-api/testdata/gateway/hostNetwork-enabled-mixed-routes/input/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: UDPRoute
metadata:
  name: udp-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: host-networking
      namespace: gateway-conformance-infra
  rules:
    - backendRefs:
        - name: udp-backend-host-networking
          port: 53
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: tcp-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: host-networking
      namespace: gateway-conformance-infra
  rules:
    - backendRefs:
        - name: tcp-backend-host-networking
          port: 53
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: host-networking
      namespace: gateway-conformance-infra
  hostnames:
    - example.org
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: host-networking
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: udp
      port: 53
      protocol: UDP
    - allowedRoutes:
        namespaces:
          from: Same
      name: tcp
      port: 53
      protocol: TCP
    - allowedRoutes:
        namespaces:
          from: Same
      name: http
      port: 80
      protocol: HTTP
